Chapter 04 Least Privilege/Basic-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress-publico-newspaper
  namespace: packt
spec:
  podSelector: {}  # Applies to all pods in the namespace
  policyTypes:
  - Egress
  egress: []  # Deny all egress traffic by not allowing any rules
